[gd_scene load_steps=27 format=2]

[ext_resource path="res://TheIntroScene.gd" type="Script" id=1]
[ext_resource path="res://Themes/BattleTheme.tres" type="Theme" id=2]
[ext_resource path="res://Audio/SFX/UI/retro_blip_beep_03.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/Explosions/explosion_small_no_tail_01.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/SFX/UI/retro_blip_beep_01.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/SFX/UI/retro_blip_beep_02.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/SFX/UI/ui_button_simple_click_04.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/SFX/UI/hospital_beep_alarm_glitch_01.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/SFX/UI/beep_10.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/SFX/Explosions/explosion_small_no_tail_03.wav" type="AudioStream" id=10]
[ext_resource path="res://GFX/SexyDatingGirl.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "IntroDone"
tracks/0/type = "value"
tracks/0/path = NodePath("TheTerminalText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("TheIntroSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("GamePanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GamePanel/MERGE ERROR:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../MainGame/SvenLabel:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 33.554, 46 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../MainGame/SvenLabel:rect_rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../MainGame/Button:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../ColorRect2:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../MainGame:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../MainGame/Button:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../MainGame/SvenLabel:text")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Bearded Programmer Sven - 

A Game by Alexander Hjelm and Robert Arnborg

Lead Programmer + PixiArt- Alexander Hjelm

Cell Animations Music/SFX and Sh# - Robert Arnborg" ]
}

[sub_resource type="Animation" id=2]
resource_name = "TheIntroAnim"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath("TheTerminalText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 1.8, 2, 2.1, 2.1, 2.3, 2.4, 2.6, 2.7, 2.9, 3.3, 3.7, 3.9, 4.1, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "M", "MS", "MS-DOS", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11_", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11_", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11_", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11_", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11_", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11_", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11_", "MSDOUCH Version 3.11", "MSDOUCH Version 3.11

C:/", "MSDOUCH Version 3.11

C:/R", "MSDOUCH Version 3.11

C:/RU", "MSDOUCH Version 3.11

C:/RUN", "MSDOUCH Version 3.11

C:/RUN G", "MSDOUCH Version 3.11

C:/RUN", "MSDOUCH Version 3.11

C:/RUNG", "MSDOUCH Version 3.11

C:/RUNGA", "MSDOUCH Version 3.11

C:/RUNGAM", "MSDOUCH Version 3.11

C:/RUNGAME", "MSDOUCH Version 3.11

C:/RUNGAME.", "MSDOUCH Version 3.11

C:/RUNGAME.E", "MSDOUCH Version 3.11

C:/RUNGAME.EX", "MSDOUCH Version 3.11

C:/RUNGAME.EXE", "MSDOUCH Version 3.11

C:/RUNGAME.EX", "MSDOUCH Version 3.11

C:/RUNGAME.E", "MSDOUCH Version 3.11

C:/RUNGAME", "MSDOUCH Version 3.11

C:/RUNGAME.", "MSDOUCH Version 3.11

C:/RUNGAME", "MSDOUCH Version 3.11

C:/RUNGAME$", "MSDOUCH Version 3.11

C:/RUNGAME$$", "MSDOUCH Version 3.11

C:/RUNGAME$$$", "MSDOUCH Version 3.11

C:/RUNGAME$$$.", "MSDOUCH Version 3.11

C:/RUNGAME$$$.E", "MSDOUCH Version 3.11

C:/RUNGAME$$$.EX", "MSDOUCH Version 3.11

C:/RUNGAME$$$.EXE" ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("TheIntroSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1, 1.4, 1.4, 1.8, 2, 2.2, 2.4, 3.3, 3.7, 3.9, 4.1, 4.3, 4.4, 4.5, 4.6, 4.8, 4.9, 5, 5.1, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 7.3, 7.6, 9.1, 9.4, 9.7, 10, 10.3, 10.6, 10.9, 11.4, 12.3, 13.3, 14.1, 14.8 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("GamePanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 7.5, 11.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GamePanel/MERGE ERROR:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 9.4, 9.6, 9.7, 9.9, 10, 10.2, 10.3, 10.5, 10.6, 10.8, 10.9, 11.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 12.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../MainGame/SvenLabel:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 13.3, 13.8, 13.9, 15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 74.5543, 46 ), Vector2( 74.5543, 46 ), Vector2( 0.554321, 46 ), Vector2( 26.554, 46 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../MainGame/SvenLabel:rect_rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 13.3, 13.8, 13.9, 14.4136 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.847543, -0.726435, -0.608045, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../MainGame/Button:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 14.6, 14.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../ColorRect2:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 13.3, 14, 14.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../MainGame:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 13.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../MainGame/Button:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 14.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../MainGame/SvenLabel:text")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Bearded Programmer Sven - 

A Game by Alexander Hjelm and Robert Arnborg

Lead Programmer + PixiArt- Alexander Hjelm

Cell Animations Music/SFX and Sh# - Robert Arnborg" ]
}

[sub_resource type="Animation" id=15]
resource_name = "WTF"
tracks/0/type = "value"
tracks/0/path = NodePath("../MainGame/SvenLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "You are Sven, you have merged with game and must 
merge with the gamemaker to become whole again.

Move with arrow keys. Use mouse to interact with GUI.
Merge with your brain to read screen for information.

Now play the game, Sven, Programmer, Warrior. 
May the Merge be with you." ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 1, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
shadow_color = Color( 0.380392, 1, 1, 0.6 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="Theme" id=6]
Panel/styles/panel = SubResource( 3 )
Panel/styles/panelf = SubResource( 4 )
Panel/styles/panelnc = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/Retro Gaming.ttf"

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 1, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
shadow_color = Color( 0.380392, 1, 1, 0.6 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=10]

[sub_resource type="StyleBoxFlat" id=11]

[sub_resource type="Theme" id=12]
Panel/styles/panel = SubResource( 9 )
Panel/styles/panelf = SubResource( 10 )
Panel/styles/panelnc = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Fonts/Retro Gaming.ttf"

[sub_resource type="DynamicFont" id=14]
size = 100
font_data = SubResource( 13 )

[node name="TheIntroScene" type="Node2D"]
script = ExtResource( 1 )

[node name="TheCanvas" type="CanvasLayer" parent="."]

[node name="TheIntro" type="Control" parent="TheCanvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="TheCanvas/TheIntro"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TheTerminalText" type="Label" parent="TheCanvas/TheIntro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -919.0
margin_top = -500.5
margin_right = 919.0
margin_bottom = 500.5
theme = ExtResource( 2 )

[node name="TheIntroSFX" type="AudioStreamPlayer" parent="TheCanvas/TheIntro"]
stream = ExtResource( 3 )
volume_db = -12.0

[node name="TheIntroAnim" type="AnimationPlayer" parent="TheCanvas/TheIntro"]
autoplay = "TheIntroAnim"
anims/IntroDone = SubResource( 1 )
anims/TheIntroAnim = SubResource( 2 )
anims/WTF = SubResource( 15 )

[node name="GamePanel" type="Panel" parent="TheCanvas/TheIntro"]
visible = false
margin_left = 523.446
margin_top = 324.11
margin_right = 1382.45
margin_bottom = 773.11
theme = SubResource( 6 )

[node name="SvenLabel" type="Label" parent="TheCanvas/TheIntro/GamePanel"]
margin_left = 123.0
margin_top = 46.0
margin_right = 745.0
margin_bottom = 110.0
theme = ExtResource( 2 )
text = "Sven's Dating - Sexy Babes Edition"
align = 1

[node name="TextureRect" type="TextureRect" parent="TheCanvas/TheIntro/GamePanel"]
margin_left = 57.5543
margin_top = 81.8898
margin_right = 381.554
margin_bottom = 439.89
texture = ExtResource( 11 )
expand = true

[node name="MERGE ERROR" type="Label" parent="TheCanvas/TheIntro/GamePanel"]
visible = false
margin_left = -26.4457
margin_top = 182.89
margin_right = 882.554
margin_bottom = 310.89
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "MERGE ERROR!!!"

[node name="ColorRect2" type="ColorRect" parent="TheCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_right = 1048.0
margin_bottom = 631.0
color = Color( 0, 0, 0, 1 )

[node name="MainGame" type="Panel" parent="TheCanvas"]
margin_left = 523.446
margin_top = 324.11
margin_right = 1382.45
margin_bottom = 773.11
theme = SubResource( 12 )

[node name="SvenLabel" type="Label" parent="TheCanvas/MainGame"]
margin_left = 33.554
margin_top = 46.0
margin_right = 836.554
margin_bottom = 281.0
theme = ExtResource( 2 )
text = "Bearded Programmer Sven - 

A Game by Alexander Hjelm and Robert Arnborg

Lead Programmer + PixiArt- Alexander Hjelm

Cell Animations Music/SFX and Sh# - Robert Arnborg"
align = 1
valign = 1

[node name="MERGE ERROR" type="Label" parent="TheCanvas/MainGame"]
visible = false
margin_left = -26.4457
margin_top = 182.89
margin_right = 882.554
margin_bottom = 310.89
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "MERGE ERROR!!!"

[node name="Button" type="Button" parent="TheCanvas/MainGame"]
margin_left = 152.554
margin_top = 341.89
margin_right = 355.554
margin_bottom = 391.89
theme = ExtResource( 2 )
text = "Start this Game"

[node name="WTFButton" type="Button" parent="TheCanvas/MainGame/Button"]
margin_left = 350.0
margin_right = 553.0
margin_bottom = 50.0
theme = ExtResource( 2 )
text = "Story/WTF"

[node name="UISound" type="AudioStreamPlayer" parent="TheCanvas/MainGame/Button/WTFButton"]
stream = ExtResource( 7 )
volume_db = -12.0
bus = "SFX"
[connection signal="button_up" from="TheCanvas/MainGame/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="TheCanvas/MainGame/Button/WTFButton" to="." method="_on_WTFButton_pressed"]
